# CLEANUP

./: .gitignore  .ruby-gemset  CHANGES.md  CMakeLists.txt  Chicago_Crime_Spark.py  ConfigManager.cpp  Guardfile  LICENSE  Package.swift  Problem_3a_Query.txt  Problem_3b_Query.txt  Procfile  README.markdown  README.md  Rakefile  Readme.md  agentInstaller_debian.sh  belt_profiles.scad  carriage copy.scad  carriage.flat.scad  carriage.scad  cogsndogs.scad  config  config.lua  configuration.scad  countries.sql  create.cpp  escambo.lua  example  frame.scad  gateways.sql  index.js  insertDaytrip.cpp  insertVehicle.cpp  jhead.scad  lm8uu-holder-dualscrew.scad  luash.lua  main.go  mccmnc.sql  nozzle_mount.scad  (+13 more)
EXPORTED/: README.md
FORKS/Assembly/gocool/: repo_detail.json  repo_listing.json
FORKS/C++/Gource/: repo_detail.json  repo_listing.json
FORKS/C++/LogScanner/: repo_detail.json  repo_listing.json
FORKS/C++/OpenPGP/: repo_detail.json  repo_listing.json
FORKS/C++/Postgre-Project/: repo_detail.json  repo_listing.json
FORKS/C++/bison-flex-cpp-example/: repo_detail.json  repo_listing.json
FORKS/C++/luacv/: repo_detail.json  repo_listing.json
FORKS/C++/luawrapper/: repo_detail.json  repo_listing.json
FORKS/C++/node-gpg/: repo_detail.json  repo_listing.json
FORKS/C++/node-native-set/: repo_detail.json  repo_listing.json
FORKS/C++/smsgate/: repo_detail.json  repo_listing.json
FORKS/C++/vermont/: repo_detail.json  repo_listing.json
FORKS/C/GreenletProfiler/: repo_detail.json  repo_listing.json
FORKS/C/L.A.S.E.R.-TAG-GRL/: repo_detail.json  repo_listing.json
FORKS/C/Mongo-Good/: repo_detail.json  repo_listing.json
FORKS/C/amqp.lua/: repo_detail.json  repo_listing.json
FORKS/C/bloomd/: repo_detail.json  repo_listing.json
FORKS/C/dablooms/: repo_detail.json  repo_listing.json
FORKS/C/ilua/: repo_detail.json  repo_listing.json
FORKS/C/lua-cjson/: repo_detail.json  repo_listing.json
FORKS/C/luabcrypt/: repo_detail.json  repo_listing.json
FORKS/C/nginx_http_push_module/: repo_detail.json  repo_listing.json
FORKS/C/ngx_supervisord/: repo_detail.json  repo_listing.json
FORKS/C/ngx_zeromq/: repo_detail.json  repo_listing.json
FORKS/C/pg-statsd/: repo_detail.json  repo_listing.json
FORKS/C/sockproc/: repo_detail.json  repo_listing.json
FORKS/CSS/jekyll-multiple-languages-plugin/: repo_detail.json  repo_listing.json
FORKS/CSS/meteor-boilerplate/: repo_detail.json  repo_listing.json
FORKS/CSS/nginx-lesscss/: repo_detail.json  repo_listing.json
FORKS/Go/sup/: repo_detail.json  (+1 more)
GISTS/: README.md
GISTS/bash-slack-notify/: notify.sh
GISTS/cpp-hash-reverse/: main.cpp
GISTS/ghetto-nginx-builder/: build.sh
GISTS/gitflow-cheatsheet/: README.md
GISTS/go-openpgp-armor/: example.go
GISTS/go-update-example/: update.go
GISTS/ipython-notebook-gvmagic/: gvmagic.py
GISTS/nginx-config-peg/: peg.pl
GISTS/oauth-provider-schema/: schema.sql
GISTS/openresty-bodyfilter-example/: nginx.conf
GISTS/perl-ip-info/: subnet.pl
GISTS/sslscan-knock-off/: Makefile
GISTS/swift-facebook-login/: FacebookLogin.swift
GISTS/upstart-orphans/: upstart-forgot-pid.py
GISTS/useful-pandas-snippets/: snippets.py
GISTS/uwsgi_on_pypy/: uwsgi_on_pypy.md  uwsgi_pypy_config.ini
GISTS/uwsgi_pex_makefile/: Makefile
GISTS/uwsgi_pex_sous_chef/: Makefile
GISTS/uwsgi_pex_tutorial/: README.md
GRAVEYARD/: README.md
Manager/lua/: dwzutil.lua  main.lua  roleview.lua  userview.lua
Manager/templates/: changepwd.html  login.html  perm_list.html  role_add.html  role_list.html  url_list.html  user_detail.html
agent/: right_check.lua
app/: nginx.conf
cmake/Modules/: FindGlog.cmake  FindJsonCpp.cmake
conf/: nginx.conf
config/: nginx-base.conf  statsd-config.js
core/: ConfigManager.cpp  ConfigManager.h  DLRHandler.cpp  DLRHandler.h  DataSource.h  DeliveryHandler.cpp  DeliveryHandler.h  EventHandler.h  GateManager.h  HttpClient.h  KSHandler.cpp  MTHandler.cpp  MessageClassifier.cpp  MessagesQueue.h  Operation.h  ReportPage.cpp  ReportPage.h  RequestHandler.cpp  RequestTracker.h  SMPPGate.h  SMPPGateFilterParser.cpp  SMPPGateManager.cpp  SMPPGateManager.h  SMPPGateParser.h  SMSMessage.cpp  SMSMessage.h  SMSRequest.cpp  SMSRequest.h  StatManager.h  Tariff.h
dao/: cookie_dao.lua  error.lua  perm_dao.lua  role_dao.lua  user_perm_dao.lua
defaults/: main.yml
docs/: ngx-pms.mmap
docs/demo_baike/: README.md
docs/scripts/: db.sql
examples/: send-metrics.lua
files/: permissions.yml  spigot.rules
firebasin/: connection.py  firebase.py
html/: websockets.html
lib/: statsd
logstash-aggregator/: logstash.conf
logstash-collector/: log_generator.rb  logstash.conf
private/templates/: syncDry.tpl  syncWet.tpl
public/: index.php  sync.php
public/styles/: main.css
redshift-importer/: Dockerfile  README.md  create_example.txt  redshift_setup_example.txt  scheduler.rb
resources/css/: PersonalPage.css
resources/stripes/: generate.sh
resty/: http.lua  http_headers.lua
resty/template/: microbenchmark.lua
scripts/: backup_db.sh  check_repeat.sh  check_service.sh  remove_old_logs.sh  update_country_operator_info.pl  update_country_operator_info_kz.pl  update_parts.sh  update_price_info_106.pl
server/: nright_main.lua
spec/: all_spec.lua  format_spec.lua  helper.lua
sql/: sync_table.sql
src/: FileScanner.cpp  FileScanner.h  MetricCounter.h  iterator.cpp  iterator.h  luabcrypt.c  set.h  v8_value_hasher.h
tasks/: PermissionsEx.yml  plugins.yml
templates/: allStart.sh  bungeeConfig.yml  server.properties.j2
test/: test-app.js
tmpl/: login.html  topbar.html
util/: res.lua
utils/: PGSql.h  utils.h
vars/: irc.yml  main.yml
views/: lock_topic.moon
web/: AdminPage.h  CountryGatesStats.cpp  LoginBlock.cpp  MonitoringHandler.cpp  MonitoringHandler.h  NumberInfoPage.cpp  PartnerEditor.cpp  PartnerEditor.h  PersonalCabinet.cpp  PersonalCabinet.h  RouteOptionEditor.h  RoutingEditor.cpp  SendMessageForm.cpp  SendMessageForm.h  StatisticsBlock.h  StatisticsPage.h  TariffEditor.h  WHintLineEdit.h  WHintLinePassEdit.h  WScrollTable.cpp
(+389 files in other folders)
